# chimitheque_utils

./: Cargo.toml  README.md  perf.data  perf.data.old
.github/workflows/: rust.yml
src/: .~lock.casbin.xlsx#  casbin.rs  casbin.xlsx  casnumber.rs  casnumber_tests.rs  cenumber.rs  cenumber_tests.rs  define.rs  formula.rs  formula_tests.rs  lib.rs  main.rs  product.rs  pubchem.rs  pubchem_compound.rs  pubchem_product.rs  pubchem_type.rs  requestfilter.rs  string.rs  string_tests.rs
src/testdata/: defines.rs  pubchem_pug_view.json
