[package]
name = "chimitheque_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
chimitheque_types = { path = "../chimitheque_types" }
env_logger = "0.10.0"
futures = "0.3.29"
governor = "0.6.0"
image = "0.24.7"
log = "0.4.20"
regex = "1.10.2"
reqwest = { version = "0.11", features = ["blocking", "json", "gzip", "deflate"] } 
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.68"
url = "2.4.1"
urlencoding = "2.1.3"

[profile.release]
debug = true