[package]
name = "chimitheque_utils"
version = "0.1.0"
edition = "2024"
authors = ["Thomas Bellembois <thomas.bellembois@proton.me>"]
description = "Chemical utilities for Chimithèque"
license = "GPL-3.0"
repository = "https://github.com/tbellembois/chimitheque_utils"
homepage = "https://github.com/tbellembois/chimitheque_utils"
readme = "README.md"
categories = ["database", "science"]
keywords = ["chemistry", "biology", "database", "management"]
rust-version = "1.94.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-error = "0.2.2"
env_logger = "0.10.0"
log = "0.4.20"
regex = "1.10.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
