[package]
name = "chimitheque_utils"
version = "0.1.0"
edition = "2024"
authors = ["Thomas Bellembois <thomas.bellembois@proton.me>"]
description = "Chemical utilities for Chimithèque"
license = "GPL-3.0"
repository = "https://github.com/tbellembois/chimitheque_utils"
homepage = "https://github.com/tbellembois/chimitheque_utils"
readme = "README.md"
categories = ["database", "science"]
keywords = ["chemistry", "biology", "database", "management"]
rust-version = "1.88.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.11.10", default-features = false }
log = { version = "0.4.29", default-features = false }
regex = { version = "1.12.3", default-features = false }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
